--- a/home.html
+++ b/home.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style.css">
-    <h1>Hello World!</h1>
-    <!-- how to create a button with a link on the page "/home"-->
-    <button type="button" href="/home">Home</button>
+    <h1>Hello,  you are in the home page!</h1>
+    <button type="button" href="/">Back</button>
 </body>
 </html>
