--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <link rel="stylesheet" href="style.css">
     <h1>Hello World!</h1>
     <!-- how to create a button with a link on the page "/home"-->
-    <button type="button" href="/home">Home</button>
+    <a href="/home.html"><button type="button">Home</button></a>
 </body>
 </html>
