--- a/home.html
+++ b/home.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello,  you are in the home page!</h1>
-    <button type="button" href="/">Back</button>
+    <a href="/index.html"><button type="button">Back</button></a>
 </body>
 </html>
