--- a/home.html
+++ b/home.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <link rel="stylesheet" href="style.css">
     <h1>Hello,  you are in the home page!</h1>
-    <a href="/index.html"><button type="button">Back</button></a>
+    <a href="index.html"><button type="button">Back</button></a>
 </body>
 </html>
