Google adsense update

--- a/1index.html
+++ b/1index.html
@@ -35,7 +35,14 @@ sessionStorage.setItem("visited", "y");
 } 
 document.addEventListener('DOMContentLoaded', t_setvisRecs);
 }
-})();</script></head><body class="t-body" style="margin:0;"><!--allrecords--><div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="8243607" data-tilda-page-id="41793334" data-tilda-formskey="222f278cee31864f710e8523d8243607" data-tilda-cookie="no" data-tilda-lazy="yes" ><div id="rec675588031" class="r t-rec t-rec_pb_0" style="padding-bottom:0px; " data-animationappear="off" data-record-type="456" ><!-- T456 --><div id="nav675588031marker"></div><div id="nav675588031" class="t456 t456__positionstatic " style="background-color: rgba(0,0,0,1); " data-bgcolor-hex="#000000" data-bgcolor-rgba="rgba(0,0,0,1)" data-navmarker="nav675588031marker" data-appearoffset="" data-bgopacity-two="" data-menushadow="" data-bgopacity="1" data-menu-items-align="right" data-menu="yes"><div class="t456__maincontainer " style=""><div class="t456__leftwrapper" style="min-width:90px;width:90px;"> <div class="t456__logowrapper" ><a href="index.html" style="color:#ffffff;"><div class="t456__logo t-title" field="title" style="color:#ffffff;">Yelisiei</div></a></div></div><nav 
+})();</script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8870705293235689"
+     crossorigin="anonymous"></script>
+
+</head>
+
+<body class="t-body" style="margin:0;"><!--allrecords--><div id="allrecords" class="t-records" data-hook="blocks-collection-content-node" data-tilda-project-id="8243607" data-tilda-page-id="41793334" data-tilda-formskey="222f278cee31864f710e8523d8243607" data-tilda-cookie="no" data-tilda-lazy="yes" ><div id="rec675588031" class="r t-rec t-rec_pb_0" style="padding-bottom:0px; " data-animationappear="off" data-record-type="456" ><!-- T456 --><div id="nav675588031marker"></div><div id="nav675588031" class="t456 t456__positionstatic " style="background-color: rgba(0,0,0,1); " data-bgcolor-hex="#000000" data-bgcolor-rgba="rgba(0,0,0,1)" data-navmarker="nav675588031marker" data-appearoffset="" data-bgopacity-two="" data-menushadow="" data-bgopacity="1" data-menu-items-align="right" data-menu="yes"><div class="t456__maincontainer " style=""><div class="t456__leftwrapper" style="min-width:90px;width:90px;"> <div class="t456__logowrapper" ><a href="index.html" style="color:#ffffff;"><div class="t456__logo t-title" field="title" style="color:#ffffff;">Yelisiei</div></a></div></div><nav 
 class="t456__rightwrapper t456__menualign_right" 
 style=""><ul role="list" class="t456__list t-menu__list"><li class="t456__list_item" 
 style="padding:0 15px 0 0;"><a class="t-menu__link-item" 
